--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </section>
     </main>
     <footer>
-        To Do List by <a href="https://fazdev-front.netlify.app/">Leonardo</a>
+        To Do List by <a href="https://miguxld-portafolio.netlify.app">miguxld</a>
     </footer>
 
     <script src="app.js"></script>
